--- a/Topic-2-Graphical-Descriptions.Rmd
+++ b/Topic-2-Graphical-Descriptions.Rmd
@@ -217,7 +217,7 @@ carshist <- head(mtcars["mpg"],30)
 ggplot(carshist, aes(x=mpg), dpi=600) +
   geom_histogram(binwidth=Bwidth,boundary=sm,
                  fill="lightblue", col="white",linewidth=1) +
-  stat_density(aes(y=4*..count..), geom="line",
+  stat_density(aes(y=4*after_stat(count)), geom="line",
                colour="blue", linetype="dotdash", linewidth=1, adjust=1.2) +
   geom_vline(aes(xintercept=mean(mpg)),
           color="brown", linetype="dashed", linewidth=1) +
@@ -300,49 +300,49 @@ cat(paste(irispetal, collapse=", "))
 
 ---
 
-## Practice: Histogram {.unnumbered}
+## Practice: Frequency Table and Histogram {.unnumbered}
 
 ::: {.iframecontainer}
-`r knitr::include_url("https://www.myopenmath.com/embedq2.php?id=1085868&seed=2024&showansafter", height="500px")`
+`r knitr::include_url("https://www.myopenmath.com/embedq.php?id=1296859&seed=2024&showansafter", height="500px")`
 :::
 
----
+<!-- --- -->
 
-## Stem-and-Leaf Plots
+<!-- ## Stem-and-Leaf Plots -->
 
-A stem-and-leaf plot is a kind of histogram that lets you see all your data instead of just class frequency information. The leading digit(s) form stems and the "tailing digits" form leaves.
+<!-- A stem-and-leaf plot is a kind of histogram that lets you see all your data instead of just class frequency information. The leading digit(s) form stems and the "tailing digits" form leaves. -->
 
-**How to Construct**
+<!-- **How to Construct** -->
 
-- Select one or more leading digits for the stem values. The trailing digits become the leaves. **Trailing digits for the same stem may further break into two leaves, lower or higher.**
-- List possible stem values in a vertical column.
-- Record the leaf for every observation beside the corresponding stem value.
-- Indicate the units for stems and leaves someplace in the display.
+<!-- - Select one or more leading digits for the stem values. The trailing digits become the leaves. **Trailing digits for the same stem may further break into two leaves, lower or higher.** -->
+<!-- - List possible stem values in a vertical column. -->
+<!-- - Record the leaf for every observation beside the corresponding stem value. -->
+<!-- - Indicate the units for stems and leaves someplace in the display. -->
 
----
+<!-- --- -->
 
-## Example: Heights of Cherry Trees
+<!-- ## Example: Heights of Cherry Trees -->
 
-Consider the following data of heights of 15 cherry trees. Create a stem-and-leaf plot and describe the distribution.
+<!-- Consider the following data of heights of 15 cherry trees. Create a stem-and-leaf plot and describe the distribution. -->
 
-::: {.center}
-```{r echo=FALSE, results = 'asis'}
-cherrytrees <- sample(trees$Height,15)
-cat(paste(sort(cherrytrees), collapse=", "))
-```
-:::
+<!-- ::: {.center} -->
+<!-- ```{r echo=FALSE, results = 'asis'} -->
+<!-- cherrytrees <- sample(trees$Height,15) -->
+<!-- cat(paste(sort(cherrytrees), collapse=", ")) -->
+<!-- ``` -->
+<!-- ::: -->
 
-**Solution:**
+<!-- **Solution:** -->
 
-:::: {style="display: flex; align-items: center; justify-content: center;"}
+<!-- :::: {style="display: flex; align-items: center; justify-content: center;"} -->
 
-```{r stem1, echo=FALSE, comment=NA}
-out1 <- capture.output(stem(cherrytrees, scale = 0.5))
-stemout1 <- paste(out1[nzchar(out1)], collapse="\n")
-cat(stemout1, sep="\n")
-```
+<!-- ```{r stem1, echo=FALSE, comment=NA} -->
+<!-- out1 <- capture.output(stem(cherrytrees, scale = 0.5)) -->
+<!-- stemout1 <- paste(out1[nzchar(out1)], collapse="\n") -->
+<!-- cat(stemout1, sep="\n") -->
+<!-- ``` -->
 
-::::
+<!-- :::: -->
 
 ---
 
