Fix formatting and comments in Rmd files

--- a/Topic-2-Graphical-Descriptions.Rmd
+++ b/Topic-2-Graphical-Descriptions.Rmd
@@ -428,10 +428,10 @@ drhist <- ggplot(dfdrk, aes(x=Alcohol), dpi=600) +
   scale_x_continuous(breaks = seq(0, 36, 1)) + 
   scale_y_continuous(breaks = seq(0, 140,5)) +
   theme_bw(base_size = 16) +
-geom_vline(aes(xintercept=mean(Alcohol)),       color="blue", linetype="dashed", size=1) +
-geom_vline(aes(xintercept=median(Alcohol)), color="red", linetype="dashed", size=1) + 
-# geom_vline(aes(xintercept=quantile(Alcohol)[2]), color="black", linetype="dashed", size=1) + 
-#geom_vline(aes(xintercept=quantile(Alcohol)[4]), color="yellow", linetype="dashed", size=1) + 
+geom_vline(aes(xintercept=mean(Alcohol)),       color="blue", linetype="dashed", linewidth=1) +
+geom_vline(aes(xintercept=median(Alcohol)), color="red", linetype="dashed", linewidth=1) + 
+# geom_vline(aes(xintercept=quantile(Alcohol)[2]), color="black", linetype="dashed", linewidth=1) + 
+#geom_vline(aes(xintercept=quantile(Alcohol)[4]), color="yellow", linetype="dashed", linewidth=1) + 
 ylab("Frequency")
 #ggplot(dfdrk, aes(x="", y=Alcohol), dpi=600)+
 #geom_boxplot(fill = "green")
@@ -483,7 +483,7 @@ The counts of majors of 100 students in a sample are shown in the table on the r
 
 :::: {.pull-right}
 ::: {.center}
-| Grade | Frequency (Counts) |
+| Major | Frequency (Counts) |
 | :----- | ------ |
 | Art     | 30      |
 | Engineering | 50      |
@@ -546,7 +546,7 @@ knitr::kable(titanic, 'pipe', align = "cc")
 ## Practice: Pie Chart {.unnumbered}
 
 ::: {.iframecontainer}
-`r knitr::include_url("https://www.myopenmath.com/embedq2.php?id=278180&seed=2024&showansafter", height="500px")`
+`r knitr::include_url("https://www.myopenmath.com/embedq.php?id=278180&seed=2024&showansafter", height="500px")`
 :::
 
 ---
