--- a/Topic-4-Linear-Relationship.Rmd
+++ b/Topic-4-Linear-Relationship.Rmd
@@ -729,12 +729,12 @@ Lab Instruction in Excel
 
 - The standard error $s_e$ of the regression (residual standard error) can be calculated by the Excel function `STEYX()`.
 
----
+<!-- --- -->
 
-## Lab Practice: Annual Maximum Wind Speed {.unnumbered}
+<!-- ## Lab Practice: Annual Maximum Wind Speed {.unnumbered} -->
 
-The annual maximum wind speed (in meters per second) in Hong Kong for each year in a 45-year period were in the linked file [HK Max Wind Speed](HKWindSpeed.xlsx).
+<!-- The annual maximum wind speed (in meters per second) in Hong Kong for each year in a 45-year period were in the linked file [HK Max Wind Speed](HKWindSpeed.xlsx). -->
 
-1. Use the annual maximum wind speed data to construct a histogram.
+<!-- 1. Use the annual maximum wind speed data to construct a histogram. -->
 
-2. Describe pattern (shape, center, spread, outliers) of the histogram.
+<!-- 2. Describe pattern (shape, center, spread, outliers) of the histogram. -->
