--- a/Topic-10-Confidence-Intervals-Mean.rmd
+++ b/Topic-10-Confidence-Intervals-Mean.rmd
@@ -117,7 +117,7 @@ That means, we can be 95.5% confidence that the average GPA $\mu$ of that colleg
 
 ---
 
-## Distribution of Confidence Interval
+## Distribution of Confidence Intervals
 
 ::: {.iframecontainer}
 `r knitr::include_url('https://rpsychologist.com/d3/CI/', height='560px')`
@@ -146,7 +146,7 @@ A sample of size 15 drawn from a normally distributed population with the standa
 
 **Solution:** One can find the critical value $z_{\alpha/2}$ by using the normal distribution table. Here, we will use the Excel function `NORM.S.INV(prob)`
 
-1. Using Excel function NORM.S.INV((1+0.9)/2), we get the critical value
+1. Using Excel function `NORM.S.INV((1+0.9)/2)`, we get the critical value
    $$z_{\alpha/2}=`r round(qnorm((1-0.1/2), 0,1),4)`.$$
 
 2. Using the Excel function `NORM.S.INV((1+0.98)/2)`, we get the critical value
@@ -173,12 +173,15 @@ A random sample of 50 students from a college gives a mean GPA 2.51. Suppose the
 
 ## Example: Mean GPA (2 of 2)
 
-Now let's find the critical value and the standard error.
+Now let's find the critical value, the standard error, the margin of error, and bounds of the confidence interval.
 
 - The critical value $z_{\alpha/2}$=`NORM.S.INV((1+0.99)/2)` $\approx 2.576$
 - The standard error is $\sigma_{\bar{x}}=\sigma/\sqrt{n}=0.43/\sqrt{50}\approx 0.06.$
+- The marginal error is $\text{E}=z_{\alpha/2}\cdot\sigma_{\bar{x}}=2.576\cdot 0.06\approx 0.16.$
+- The lower bound of the confidence interval is $\bar{x}-\text{E}=2.51-0.16=2.35$.
+- The upper bound of the confidence interval is $\bar{x}+\text{E}=2.51+0.16=2.67$.
 
-Then the marginal error is $\text{E}=z_{\alpha/2}\cdot\sigma_{\bar{x}}=2.576\cdot 0.06\approx 0.16.$ We can conclude with 99% confidence that the average GPA of all students is between $2.51-0.16=2.35$ and $2.51+0.16=2.67$.
+Conclusion: With 99% confidence, we may conclude that the mean GPA of all students at the college is between 2.35 and 2.67.
 
 ::: {.footmark}
   **Note:** The marginal error $E$ can also be obtained by the Excel function
@@ -191,7 +194,7 @@ Then the marginal error is $\text{E}=z_{\alpha/2}\cdot\sigma_{\bar{x}}=2.576\cdo
 
 - When the population standard deviation is unknown, we may replace $\sigma$ by the sample standard deviation $s$ and use $s/\sqrt{n}$ as an estimate to the standard error for the sampling distribution of the sample mean.
 
-- When we use the estimated standard error $s / \sqrt{n}$ to build a confidence interval, the <span class="red">normal distribution may OT</span> be appropriate for calculating the critical value.
+- When we use the estimated standard error $s / \sqrt{n}$ to build a confidence interval, the <span class="red">normal distribution may NOT</span> be accurate for calculating the critical value.
 
 - If the random variable $\bar{x}$ is approximately normal, then the random variable $t=\dfrac{\bar{x}-\mu}{s / \sqrt{n}}$ has a **[Student's $t$-distribution](https://en.wikipedia.org/wiki/Student%27s_t-distribution) with the degree of freedom $n-1$**.
 
@@ -203,9 +206,9 @@ Then the marginal error is $\text{E}=z_{\alpha/2}\cdot\sigma_{\bar{x}}=2.576\cdo
 
 ## Remarks
 
-- This result was discovered by William Gosset, an employee of the Guinness brewing company, who published his result using the name Student.
-
 - Unlike in the case of a sample proportion, the sample standard deviation $s$ is not determined by the sample mean $\bar{x}$.
+
+- This result was discovered by William Gosset, an employee of the Guinness brewing company, who published his result using the name Student.
 
 ---
 
@@ -218,7 +221,7 @@ Then the marginal error is $\text{E}=z_{\alpha/2}\cdot\sigma_{\bar{x}}=2.576\cdo
   2. The $t$-distribution has slightly more variation (i.e. $t$-curves are <span class="blue">slightly “fatter”</span>) than the standard normal distribution.
   3. When the <span class="blue">degree of freedom increases</span>, the $t$-distribution becomes <span class="blue">closer to the standard normal distribution</span>.
 
-- In practice, when the sample size is large enough $n>30$, people use normal distribution as an approximation for the Student $t$-distribution.
+- In practice, when the sample size is large enough $n>30$, some textbooks use normal distribution as an approximation for the Student $t$-distribution.
 
 ---
 
