--- a/Topic-11-Confidence-Intervals-Proportion.rmd
+++ b/Topic-11-Confidence-Intervals-Proportion.rmd
@@ -29,7 +29,7 @@ library(latex2exp)
 
 ## Learning Goals for Confidence Intervals
 
-- Construct and interpret a confidence intervals for one population proportion.
+- Construct and interpret a confidence interval for one population proportion.
 
 - Describe how the following will affect the width of the confidence interval:
 
@@ -65,7 +65,7 @@ library(latex2exp)
 
 ---
 
-## Distribution of Confidence Interval
+## Distribution of Confidence Intervals
 
 By the central limit theorem, the random variable $\hat{p}$ is normally distributed. The chance that
 $$p\in \left[\hat{p}-z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}, \hat{p}+z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}\right]$$
@@ -167,7 +167,7 @@ The estimated population standard deviation is $\sigma=1.3$.
 Then the minimal sample size is approximately
 $$n=\left(\dfrac{z_{\alpha/2}\cdot \sigma}{{E}}\right)^2\approx (2.576\cdot 1.3/0.2)^2 \approx 280.4.$$
 
-To get a error no more than 0.2 at the level 95%,  the minimal sample size should be at least 281.
+To get a error no more than 0.2 at the level 95%, the minimal sample size should be at least 281.
 
 ---
 
